fixed broken CSS

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -40,12 +40,12 @@
   margin-top: 0;
 }
 
-.article.title {
+.article-title {
   font-weight: bold;
   font-size: 1.5em;  
 }
 
-.article.body {
+.article-body {
   border-top: 1px solid #eaeaea;
   padding-top: 15px;
   padding-bottom: 15px;
